# adaptive-roi-codec

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  MCE-Experiment-Requirements-EN.md  README.md  README.ru.md  pyproject.toml
adaptive_roi_codec/: __init__.py  train.py
adaptive_roi_codec/cli/: build_dataset_manifest.py  extract_frames.py
adaptive_roi_codec/jobs/: __init__.py  launch.py  run_train.py
adaptive_roi_codec/losses/: clinical_loss.py  ssim.py
adaptive_roi_codec/model/: __init__.py  quantizer.py  roi_detector.py  vae_codec.py
adaptive_roi_codec/utils/: config.py  dataset_manifest.py  datasphere_exit.py  device.py  env.py  frame_io.py  job_progress.py  kvasir_loader.py  metrics.py  video_index.py
configs/: base.yaml  quantizer.yaml
docker/datasphere-gpu/: BUILD.md  Dockerfile  job_train.docker.yaml.template
docs/: opisanie-eksperimenta.md
docs/decisions/: ADR-001-datasphere-jobs-training.md  ADR-002-native-336-training-resolution.md  ADR-003-two-stage-training-pipeline.md  README.md
docs/experiments/: README.md  v100-kappa-2.0-18ep.en.md  v100-kappa-2.0-18ep.ru.md
jobs/: requirements-datasphere-cpu.txt  requirements-datasphere-gpu.txt
scripts/: README.md  demo_inference.py  demo_pipeline.py  demo_quantization.py
tests/: test_config.py  test_datasphere_exit.py  test_datasphere_requirements.py  test_device.py  test_extract_frames_imports.py  test_frame_io.py  test_job_progress.py  test_kvasir_loader.py  test_launch.py  test_preprocessed_loader.py  test_quantizer.py  test_train_metrics.py  test_train_paths.py  test_vae_codec.py
(+18 files in other folders)
