[project]
name = "adaptive-roi-codec"
version = "0.1.0"
description = "Neural video codec with adaptive ROI bitrate allocation for capsule endoscopy"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "albumentations>=1.4.0",
    "boto3>=1.34.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]

[project.optional-dependencies]
cloud = [
    "datasphere>=0.7.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
launch-train = "adaptive_roi_codec.jobs.launch:main"
build-dataset-manifest = "adaptive_roi_codec.cli.build_dataset_manifest:main"
extract-frames = "adaptive_roi_codec.cli.extract_frames:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["adaptive_roi_codec"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
